# Devendra-Engine

./: .gitignore  CMakeLists.txt  DevendraConfig.h.in  DevendraEngine.sln  README.md  build.bat  build.sh  buildtests.bat  clear.bat  cloc.bat  ctime.ctm  premake5.lua  run.bat  run.sh  runtests.bat  setup.bat  shell.bat
DevendraMath/: CMakeLists.txt
DevendraMath/include/: DVec3.h  DVec4.h  defines.h
DevendraMath/src/: DMatrix.h  DVec2.h  Devendra_Math.h  main.cpp
DevendraRayTracer/: CMakeLists.txt
DevendraRayTracer/src/: Ray.cpp  Ray.h  main.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
bin-int/Release-windows-x86_64/engine/: engine.exe.recipe
engine/: Win32_Devendra.cpp  Win64_Devendra.cpp  engine.vcxproj  premake5.lua
engine/code/: DBitmap.h  DMatrix.h  DRay.h  DVec2.h  DVec3.h  DVec4.h  Devendra_Logger.cpp  Devendra_Math.h  Devendra_User_Input.h  Devendra_Utils.cpp  Devendra_Win32_GL.cpp  Devendra_Win32_GL.h  Devendra_Win32_GL_EXT.h  Win32_Devendra.cpp  Win32_Devendra.h  defines.h
engine/code/libs/: glext.h
engine/code/linux/: Devendra.cpp
engine/code/windows/: DBitmap.h  DMatrix.h  DRay.h  DVec2.h  DVec4.h  DevendraAudioManager.h  Devendra_Logger.cpp  Devendra_Logger.h  Devendra_Math.h  Devendra_User_Input.h  Devendra_Utils.cpp  Devendra_Utils.h  Devendra_Win32_GL.cpp  Devendra_Win32_GL.h  Devendra_Win32_GL_EXT.h  Win32_Devendra.cpp  Win32_Devendra.h  defines.h
engine/include/: DevendraAudioManager.h  Devendra_Benchmark.h  Devendra_Clock.h  Devendra_Logger.h  Devendra_Math.h  Devendra_Renderer.h  Devendra_Shader.h  Devendra_User_Input.h  Devendra_Utils.h  Devendra_Win32_GL.h  Devendra_Win32_GL_EXT.h  Win32_GL.h  defines.h
engine/libs/: Win32_keycodes.h  glfw3.lib  soil2.lib
engine/misc/: Current Issues.txt  Engine Details.txt  TODO
engine/misc/shader/: defaultfragment.glsl  defaultvertex.glsl
engine/source/: Sphere.cpp  Sphere.h  Utils.cpp  Utils.h  defines.h  main.cpp
engine/src/: Devendra_Benchmark.cpp  Devendra_Clock.cpp  Devendra_Logger.cpp  Devendra_Renderer.cpp  Devendra_Shader.cpp  Devendra_Utils.cpp  Devendra_Win32_GL.cpp  Devendra_Win32_GL_EXT.cpp  Win32_Devendra.cpp  Win32_GL.cpp  Win64_Devendra.cpp
engine/src/benchmark/: Devendra_Benchmark.cpp  (+1 more)
engine/tests/: DMathTest.cpp  DRayTest.cpp
include/: Win32_keycodes.h  glext.h
learning materials/: LearningTopics.txt
linuxScripts/: build.sh  run.sh
misc/: TODO
tools/: ctime.c
winscripts/: build.bat  buildtests.bat  cloc.bat  runtests.bat
(+21 files in other folders)
